# dojo8

./: Cargo.toml  README.md  rust-toolchain.toml
benches/: loop_generations.rs
src/: grid.rs  main.rs
