[package]
edition = "2021"
name = "gameoflife"
version = "0.0.1"


[lib]
name = "gameoflife"
path = "src/lib.rs"

default-run = "gameoflife_cli"

[[bin]]
name = "gameoflife_cli"
path = "src/bin/main.rs"

[[bench]]
name = "loop_generations"
harness = false

[dependencies]
indoc = "2"
enum-map = "2.7"
strum = "0.25"
strum_macros = "0.25"
rand = "0.8"
clearscreen = "2.0"
anyhow = "1.0"
bitvec = "1.0"

[dev-dependencies]
test-case = "3.1"
pretty_assertions = "1"
criterion = "0.5"
